tests/failures/todo_while/invalid_version.rs
use todo_by::todo_while;

fn main() {
    todo_while!("2024/01/01");
}
